test/integration/bad/function-signatures/tuple-dataonly-ad.stan

functions {
  real foo(data (real, real) x){
    return x.1;
  }
}

parameters {
  (real, real) ps;
}

model {
  target += foo(ps);
}
